# LongView

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh
docker/macos/: Dockerfile  build-macos-sdk-tarball.sh
docker/ubuntu/: Dockerfile
docker/windows/: Dockerfile  package-dlls.sh  toolchain-mingw64.cmake
src/: CMakeLists.txt  appintegration.cpp  appintegration.h  main.cpp  resources.qrc  windowutils.cpp  windowutils.h
src/assets/Windows/: windows_app_icon.rc
src/assets/desktop/: longview.desktop
src/assets/icons/: icon.icns
src/assets/styles/: tile.qss
src/config/: config.h  config_exceptions.h  config_manager.cpp  config_manager.h  config_parser.cpp  config_parser.h  yaml_config_parser.cpp  yaml_config_parser.h
src/tiles/base/: tile.cpp  tile.h
src/tiles/group/: group_tile.cpp  group_tile.h
src/tiles/item/: item_tile.cpp  item_tile.h
